css/main.css
/* ... */
.header .mobile-menu__list {
  height: 50%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -ms-flex-pack: distribute;
      justify-content: space-around;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

.header .mobile-menu__link {
  color: #fff;
  font-size: 14px;
  text-transform: uppercase;
}

.header__menu {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
      -ms-flex-pack: end;
          justify-content: flex-end;
  padding-top: 40px;
}

.header .menu {
  font-family: "Muller Regular";
}

.header .menu__list {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  margin-right: 70px;
}

.header .menu__list-item:not(:first-child) {
  margin-left: 20px;
}

.header .menu__link {
  position: relative;
  color: #000;
}

.header .menu__link::after {
  content: "";
  position: absolute;
  left: 0;
  bottom: -5px;
  width: 100%;
  -webkit-transform: scaleX(0);
      -ms-transform: scaleX(0);
          transform: scaleX(0);
  height: 2px;
  background-color: #000;
  -webkit-transition: 0.6s;
  -o-transition: 0.6s;
  transition: 0.6s;
}

.header .menu__link:hover::after {
  -webkit-transform: scaleX(1);
      -ms-transform: scaleX(1);
          transform: scaleX(1);
}

@font-face {
  font-family: "Muller Regular";
  src: url(../fonts/MullerRegular.woff) format("woff"), url(../fonts/MullerRegular.woff2) format("woff2");
  /* все современные браузеры, IE9+ */
}

@font-face {
  font-family: "Muller Medium";
  src: url(../fonts/MullerMedium.woff) format("woff"), url(../fonts/MullerMedium.woff2) format("woff2");
  /* все современные браузеры, IE9+ */
}

@font-face {
  font-family: "Gotham Pro Bold";
  font-weight: bold;
  src: url(../fonts/GothamPro-Bold.woff) format("woff"), url(../fonts/GothamPro-Bold.woff2) format("woff2");
  /* все современные браузеры, IE9+ */
}

* {
  margin: 0;
  padding: 0;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
}

html,
body {
  height: 100%;
  font-family: "Muller Regular";
}

.body-no-scroll {
  overflow: hidden;
}

a {
  text-decoration: none;
}

li {
  list-style: none;
}

.wrapper {
  min-height: 100%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
}

.main {
  -webkit-box-flex: 1;
      -ms-flex: 1 0 auto;
          flex: 1 0 auto;
}

.about {
  color: #000;
  background-color: #f8b21c;
}

.about__wrapper,
.portfolio__wrapper,
.work__wrapper,
.steps__wrapper,
.faq__wrapper,
.footer__wrapper {
  max-width: 1440px;
  margin: 0 auto;
  padding: 0px 20px 40px 20px;
}

.about__heading {
  display: inline-block;
  font-size: calc( 35px + 10 * ((100vw - 320px) / 1120));
  font-family: "Gotham Pro Bold";
  text-transform: uppercase;
  margin-top: 80px;
}

.about__subheading {
  font-family: "Muller Medium";
  font-size: calc( 23px + 4 * ((100vw - 320px) / 1120));
}

.about__subheading:not(:first-child) {
  margin-bottom: 10px;
}

.about .extract {
  color: #b80000;
}

.about .typed-cursor {
  font-size: 50px;
  color: #000;
}

.portfolio {
  background-color: #f8f8f8;
}

.portfolio__heading,
.work__heading,
.steps__heading,
.faq__heading,
.footer__heading {
  text-transform: uppercase;
  font-size: calc( 35px + 10 * ((100vw - 320px) / 1120));
  display: inline-block;
  font-family: "Gotham Pro Bold", sans-serif;
  position: relative;
  margin-top: 0px;
}

.portfolio__heading::after,
.work__heading::after,
.steps__heading::after,
.faq__heading::after,
.footer__heading::after {
  content: "";
  position: absolute;
  left: 0;
  bottom: -5px;
  background-color: #f8b21c;
  width: 100%;
  height: 3px;
}

.portfolio__grid {
  /*         display: grid;
        grid-template: repeat(2, 1fr) / repeat(2, 1fr);
        gap: 20px; */
  margin-top: 50px;
}

.portfolio__grid-item {
  position: relative;
  overflow: hidden;
}

.portfolio__grid-item:hover > picture > img {
  -webkit-transform: scale(1.5);
      -ms-transform: scale(1.5);
          transform: scale(1.5);
}

.portfolio__grid-item-overlay {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.8);
  color: #fff;
  opacity: 0;
  -webkit-transition: all 0.6s;
  -o-transition: all 0.6s;
  transition: all 0.6s;
}

.portfolio__grid-item-overlay:hover {
  opacity: 1;
}

.portfolio__grid .overlay__descr {
  margin-top: 20px;
  margin-bottom: 20px;
}

.portfolio__grid .overlay__link {
  display: block;
  cursor: pointer;
  padding: 15px;
  border: none;
  background-color: white;
  color: #000;
  text-transform: uppercase;
  border-radius: 10px;
}

.portfolio__grid img {
  display: block;
  max-width: 100%;
  -webkit-transition: 0.8s;
  -o-transition: 0.8s;
  transition: 0.8s;
}

.portfolio__grid .left-arrow,
.portfolio__grid .right-arrow {
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
      -ms-transform: translateY(-50%);
          transform: translateY(-50%);
  width: 30px;
  height: 30px;
}

.portfolio__grid .left-arrow {
  left: 0;
}

.portfolio__grid .right-arrow {
  right: 0;
}

.portfolio__grid .owl-dots,
.portfolio__grid .owl-nav {
  height: 0;
}

.portfolio__btn {
  display: block;
  margin: 30px auto 0;
  text-transform: uppercase;
  padding: 15px;
  font-family: "Muller", sans-serif;
}
/* ... */

